--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "docxtemplater": "^3.43.0",
     "element-plus": "^2.5.1",
+    "pizzip": "^3.1.4",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5"
   },
